devops-demo-app-updated/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-demo-app
  template:
    metadata:
      labels:
        app: devops-demo-app
    spec:
      containers:
      - name: devops-demo-app
        image: myuser/devops-demo-app:latest
        ports:
        - containerPort: 8080
