devops-demo-app-updated/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-app-service
spec:
  selector:
    app: devops-demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
